<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="add_user">Add a Friend</string>
    <string name="user_prompt">Friend\'s Name</string>
    <string name="tip_rate">tip percentage i.e. 15</string>
    <string name="tax_rate">tax percentage</string>
    <string name="sd">SD</string>
    <string name="sixtwosix">626</string>
    <string name="bay">bay</string>
    <string name="submit">submit</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="action_settings">Settings</string>
    <string name="subtotal">Subtotal: </string>
    <string name="pretip">Total + tax:  </string>
    <string name="posttip">Post-tip amount: </string>
    <string name="display_tip_amt">Tip amount: </string>
</resources>
